--- a/src/styles/demo.scss
+++ b/src/styles/demo.scss
@@ -26,7 +26,7 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 code {
-  font-family: 'Cutive Mono', monospace !important; // Overwrite "prism JS"
+  font-family: 'Cutive Mono', monospace !important; // Overwrite "prismjs"
   font-size: 0.85rem;
   line-height: 0.85rem;
 }
@@ -46,7 +46,7 @@ code {
 }
 
 .demo-full-screen__toggle {
-  @include demo-dark-button(right);
+  @include demo-dark-button(right); // FIXME: DEPRECATED ?
 }
 
 /* ===== Handle layout ===== */
@@ -59,7 +59,6 @@ code {
   width: 50%;
   overflow: auto;
   box-sizing: border-box;
-  //padding: 1rem;
   display: flex;
   flex-direction: column;
 }
@@ -71,10 +70,9 @@ code {
   background: white;
 
   code {
-    padding: 0.1em 0.3em;
-    border-radius: $www-border-radius;
-    border: 1px solid rgba(0, 0, 0, 0.05);
-    background-color: rgba(0, 0, 0, 0.05);
+    padding: 0.2em 0.4em; // From "primer-markdown"
+    border-radius: 3px; // From "primer-markdown"
+    background-color: rgba(27,31,35,0.05); // From "primer-markdown"
   }
 }
 
@@ -85,7 +83,7 @@ code {
   min-height: 200px;
   max-height: 100%;
   box-sizing: border-box;
-  border-top: map-get($www-showcase, border-width) solid map-get($www-showcase, border-color);
+  border-top: $www-showcase-border;
   background: #f6f8fa;
   padding: 1rem;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.033) inset;
@@ -105,7 +103,7 @@ pre.demo-layout__output {
   width: 50%;
   overflow: auto;
   box-sizing: border-box;
-  border-left: map-get($www-showcase, border-width) solid map-get($www-showcase, border-color);
+  border-left: $www-showcase-border;
   padding: $www-border-radius;
 
   // Remove default browser `<pre>` styles
