--- a/src/styles/www.scss
+++ b/src/styles/www.scss
@@ -1,23 +1,5 @@
 @import "./variables.scss";
 
-/* ===== Base ===== */
-
-body {
-  padding: 0;
-}
-
-html, body {
-  height: auto; // FIXME: DEPRECATED ?
-}
-
-a {
-  color: $www-link;
-}
-
-main {
-  display: block; // For IE11
-}
-
 /* ===== Container ===== */
 
 .www-container {
@@ -185,26 +167,10 @@ h2.www-header__subtitle { // Add "h2" selector to overwrite "primer-markdown".
   border: none;
 }
 
-.www-showcase__link {
+// Use the action from "demo" universe
+.demo-action--open-link {
   position: absolute;
   top: -0.8rem;
   left: -0.8rem;
   z-index: 9;
-  width: 2rem;
-  height: 2rem;
-  line-height: 2rem;
-  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
-  border-radius: $www-border-radius;
-  border: 1px solid map-get($demo-dark, border);
-  background-color: map-get($demo-dark, background);
-  color: map-get($demo-dark, forground) !important;
-  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.2);
-  text-align: center;
-  text-decoration: none;
-  opacity: 0.75;
-  transition: opacity ease 300ms;
-
-  &:hover {
-    opacity: 1;
-  }
 }
