--- a/src/styles/www.scss
+++ b/src/styles/www.scss
@@ -174,3 +174,16 @@ h2.www-header__subtitle { // Add "h2" selector to overwrite "primer-markdown".
   left: -0.8rem;
   z-index: 9;
 }
+
+/* ===== Footer ===== */
+
+.www-footer {
+  margin-top: map-get($www-header, padding);
+  margin-bottom: (map-get($www-header, padding) / 2);
+  color: map-get($www-header, forground);
+  text-align: center;
+
+  b {
+    color: map-get($www-navbar, background);
+  }
+}
