--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,6 +12,7 @@ $demo-action: (
 
 /* ===== www ===== */
 
+$www-min-width: 768px; // For now, the website is not responsive for small screen...
 $www-max-width: 992px;
 
 $www-border-radius: 3px;
