--- a/src/styles/www.scss
+++ b/src/styles/www.scss
@@ -5,6 +5,7 @@
 .www-container {
   margin: 0 auto;
   box-sizing: border-box;
+  min-width: $www-min-width;
   max-width: $www-max-width;
   padding: 0 1rem;
 }
