--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,7 +7,8 @@ $demo-warn: #D32F2F;
 $demo-action: (
   border: #0D47A1,
   background: #1565C0,
-  forground: #E3F2FD
+  forground: #E3F2FD,
+  active: #2196F3,
 );
 
 /* ===== www ===== */
