--- a/src/styles/demo.scss
+++ b/src/styles/demo.scss
@@ -20,6 +20,10 @@ h1, h2, h3, h4, h5, h6, p {
   margin: 1rem 0;
 }
 
+h1, h2, h3 {
+  line-height: 1.2em;
+}
+
 code {
   font-family: 'Cutive Mono', monospace !important; // Overwrite "prismjs"
   font-size: 0.85rem;
@@ -52,6 +56,10 @@ main {
   padding: 1rem;
   flex-grow: 1;
   flex-shrink: 0;
+
+  h1 {
+    margin-top: 0;
+  }
 
   code {
     padding: 0.2em 0.4em; // From "primer-markdown"
