--- a/src/styles/demo.scss
+++ b/src/styles/demo.scss
@@ -116,11 +116,11 @@ pre.demo-layout__output--gray {
   background-color: #f5f5f5;
 }
 
-.demo-layout__source {
+.demo-layout__playground {
   height: 100%;
 }
 
-.demo-layout__source--auto {
+.demo-layout__playground--auto {
   height: auto;
 }
 
