Make www responsive (in progress...)

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -13,7 +13,7 @@ $demo-action: (
 
 /* ===== www ===== */
 
-$www-min-width: 768px; // For now, the website is not responsive for small screen...
+$www-min-width: 0; // 768px; // For now, the website is not responsive for small screen...
 $www-max-width: 992px;
 
 $www-border-radius: 3px;
