--- a/src/styles/www.scss
+++ b/src/styles/www.scss
@@ -1,3 +1,6 @@
+@import "../lib/variables";
+@import "../lib/mixins";
+
 @import "./variables.scss";
 
 /* ===== Container ===== */
@@ -5,7 +8,6 @@
 .www-container {
   margin: 0 auto;
   box-sizing: border-box;
-  min-width: $www-min-width;
   max-width: $www-max-width;
   padding: 0 1rem;
 }
@@ -164,8 +166,8 @@ h2.www-header__subtitle { // Add "h2" selector to overwrite "primer-markdown".
 .www-showcase__iframe {
   display: block;
   width: 100%;
-  height: 70vh;
-  max-height: 480px;
+  height: 85vh;
+  max-height: 550px;
   border-radius: ($www-border-radius - map-get($www-showcase, border-width));
   border: none;
 }
@@ -188,5 +190,19 @@ h2.www-header__subtitle { // Add "h2" selector to overwrite "primer-markdown".
 
   b {
     color: map-get($www-navbar, background);
+  }
+}
+
+/* ===== Responsive ===== */
+
+@include bfg-media-breakpoint-down(sm) {
+  .www-navbar--front {
+    width: 65%;
+  }
+
+  .www-header__title {
+    margin-top: 1.5rem;
+    margin-right: 0;
+    font-size: 3rem;
   }
 }
