--- a/src/styles/demo.scss
+++ b/src/styles/demo.scss
@@ -31,6 +31,7 @@ code {
   font-family: 'Cutive Mono', monospace !important; // Overwrite "prismjs"
   font-size: 0.85rem;
   line-height: 0.85rem;
+  white-space: pre;
 }
 
 a {
