--- a/src/styles/www.scss
+++ b/src/styles/www.scss
@@ -65,7 +65,7 @@
   position: relative;
   z-index: 12;
   margin-bottom: (map-get($www-navbar, height) + map-get($www-showcase, margin));
-  padding: map-get($www-header, padding) 0 (map-get($www-header, padding) / 2) 0;
+  padding: (map-get($www-navbar, height) + map-get($www-header, padding)) 0 (map-get($www-header, padding) / 2) 0;
   background-color: map-get($www-header, background);
   border-bottom: 1px solid map-get($www-header, border);
   text-align: center;
@@ -87,7 +87,7 @@
 
 h2.www-header__subtitle { // Add "h2" selector to overwrite "primer-markdown".
   margin: 0;
-  margin-top: (map-get($www-header, padding) / 2);
+  margin-top: map-get($www-header, padding);
   padding: 0; // Remove "primer-markdown" style
   border: none; // Remove "primer-markdown" style
   line-height: inherit; // Remove "primer-markdown" style
