--- a/src/styles/www.scss
+++ b/src/styles/www.scss
@@ -173,7 +173,7 @@ h2.www-header__subtitle { // Add "h2" selector to overwrite "primer-markdown".
 }
 
 // Use the action from "demo" universe
-.demo-action--open-link {
+.demo-toolbox__action--open-link {
   position: absolute;
   top: -0.8rem;
   left: -0.8rem;
