--- a/src/lib/_container.scss
+++ b/src/lib/_container.scss
@@ -6,7 +6,7 @@
     position: relative;
     overflow: hidden;
     height: $bfg-header-height;
-    line-height: $bfg-header-height;
+    line-height: $bfg-header-height; // mixin!
     font-size: 1rem;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -18,9 +18,9 @@
 
     + .bfg__action,
     + .bfg__header {
-      box-shadow: none;
-      border-top-right-radius: 0;
-      border-right-width: 0;
+      box-shadow: none; // mixin!
+      border-top-right-radius: 0; // mixin!
+      border-right-width: 0; // mixin!
     }
   }
 
@@ -28,7 +28,6 @@
     padding: $bfg-padding;
     box-sizing: border-box;
     position: relative;
-    overflow: auto;
     width: 100%;
     height: 100%;
   }
@@ -37,17 +36,26 @@
     padding: 0;
   }
 
-  .bfg--content-overflow .bfg__content,
-  .bfg__content--overflow {
-    overflow: visible;
-  }
-
   .bfg__header + .bfg__content {
     height: calc(100% - #{$bfg-header-height});
-    border-top: none;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
+    border-top: none; // mixin!
+    border-top-left-radius: 0; // mixin!
+    border-top-right-radius: 0; // mixin!
   }
+}
+
+.bfg__content {
+  overflow: auto;
+}
+
+.bfg--content-overflow-visible .bfg__content,
+.bfg__content--overflow-visible {
+  overflow: visible;
+}
+
+.bfg--content-overflow-hidden .bfg__content,
+.bfg__content--overflow-hidden {
+  overflow: hidden;
 }
 
 @if $bfg-theme-light-included {
