Rename "light" theme into "primary"

--- a/src/lib/_content.scss
+++ b/src/lib/_content.scss
@@ -65,6 +65,6 @@
   }
 }
 
-@if $bfg-theme-light-included {
-  @include bfg-theme(light, $bfg-theme-light);
+@if $bfg-theme-primary-included {
+  @include bfg-theme(primary, $bfg-theme-primary);
 }
