Remove "theme" prefix

--- a/src/lib/_variables.scss
+++ b/src/lib/_variables.scss
@@ -27,4 +27,4 @@ $bfg-theme-primary: (
   content-forground: false
 ) !default;
 
-$bfg-theme-primary-included: true;
+$bfg-theme-primary-included: true !default;
