--- a/src/lib/_mixins.scss
+++ b/src/lib/_mixins.scss
@@ -13,7 +13,7 @@
 @mixin bfg-theme($name, $settings) {
   $s: map-merge($bfg-theme-primary, $settings);
 
-  .bfg__box--theme-#{$name} {
+  .bfg__box--#{$name} {
     .bfg__action,
     .bfg__header {
       box-shadow: map-get($s, box-shadow);
