Rename "www" by "docs"

--- a/src/styles/demo.scss
+++ b/src/styles/demo.scss
@@ -79,7 +79,7 @@ main {
   min-height: 200px;
   max-height: 100%;
   box-sizing: border-box;
-  border-top: $www-showcase-border;
+  border-top: $docs-showcase-border;
   background: #f6f8fa;
   padding: 1rem;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.033) inset;
@@ -101,8 +101,8 @@ pre.demo-layout__output {
   box-shadow: none;
   box-sizing: border-box;
   overflow: auto;
-  //padding: $www-border-radius;
-  border-left: $www-showcase-border;
+  //padding: $docs-border-radius;
+  border-left: $docs-showcase-border;
   background-color: #fff;
   transition: width ease-in-out $demo-duration, box-shadow ease-in-out $demo-duration;
 
@@ -143,7 +143,7 @@ $demo-toolbox-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
   right: 0.5rem;
   bottom: 0.5rem;
   box-shadow: $demo-toolbox-shadow;
-  border-radius: $www-border-radius;
+  border-radius: $docs-border-radius;
   opacity: 0.8;
   transition: opacity ease $demo-duration;
 
@@ -156,11 +156,11 @@ $demo-toolbox-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
     border-radius: 0;
 
     &:first-child {
-      border-radius: $www-border-radius $www-border-radius 0 0;
+      border-radius: $docs-border-radius $docs-border-radius 0 0;
     }
 
     &:last-child {
-      border-radius: 0 0 $www-border-radius $www-border-radius;
+      border-radius: 0 0 $docs-border-radius $docs-border-radius;
     }
 
     &:hover {
@@ -193,7 +193,7 @@ $demo-toolbox-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
   // The 2 following rules are designed to use `.demo-toolbox__action`
   // as a standalone button, outside a `.demo-toolbox` container.
   box-shadow: $demo-toolbox-shadow;
-  border-radius: $www-border-radius;
+  border-radius: $docs-border-radius;
 
   &:hover {
     opacity: 1;
@@ -269,7 +269,7 @@ $demo-toolbox-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
     right: 0;
     bottom: 0;
     width: 100%;
-    border-top: $www-showcase-border;
+    border-top: $docs-showcase-border;
     border-left: none;
     transition: top ease-in-out $demo-duration, box-shadow ease-in-out $demo-duration;
   }
