--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,5 @@
+@import "./functions";
+
 /* ===== demo ===== */
 
 $demo-link: #2196F3;
@@ -12,6 +14,18 @@ $demo-action: (
 );
 
 $demo-duration: 300ms;
+
+$demo-fonts: (
+  title: "Expletus Sans", // "Expletus Sans" or "Open Sans"
+  text: "Krub", // "Krub" or "Open Sans" or "Montserrat"
+  code: "IBM Plex Mono" // "IBM Plex Mono" or "Source Code Pro"
+);
+
+$title-url: str-replace(map-get($demo-fonts, title), ' ', '+');
+$text-url: str-replace(map-get($demo-fonts, text), ' ', '+');
+$code-url: str-replace(map-get($demo-fonts, code), ' ', '+');
+
+$demo-font-url: "https://fonts.googleapis.com/css?family=#{$title-url}:500|#{$text-url}|#{$code-url}";
 
 /* ===== docs ===== */
 
