--- a/src/lib/_mixins.scss
+++ b/src/lib/_mixins.scss
@@ -13,9 +13,9 @@
 @mixin bfg-theme($name, $settings) {
   $s: map-merge($bfg-theme-primary, $settings);
 
-  .bfg__box--#{$name} {
-    .bfg__action,
-    .bfg__header {
+  .bfg-card--#{$name} {
+    .bfg-card__action,
+    .bfg-card__header {
       box-shadow: map-get($s, box-shadow);
       border: map-get($s, border-width) solid map-get($s, header-border);
       background-color: map-get($s, header-background);
@@ -23,16 +23,16 @@
       line-height: calc(#{$bfg-header-height} - #{2 * map-get($s, border-width)});
     }
 
-    .bfg__action {
+    .bfg-card__action {
       border-top-right-radius: map-get($s, border-radius);
       border-left-width: 0;
     }
 
-    .bfg__header {
+    .bfg-card__header {
       border-radius: map-get($s, border-radius) map-get($s, border-radius) 0 0;
     }
 
-    .bfg__content {
+    .bfg-card__content {
       box-shadow: map-get($s, box-shadow);
       border-radius: map-get($s, border-radius);
       border: map-get($s, border-width) solid map-get($s, content-border);
