--- a/src/lib/_card.scss
+++ b/src/lib/_card.scss
@@ -43,7 +43,7 @@
 }
 
 // Rules that are related in `bfg-theme` mixin and have to be wrapped in some high level selector
-.bfg-card { // TODO: Before it was `.bfg .bfg__box`. Is this still working when using differents themes at website level ?
+.bfg-card[class*="bfg-card--"] {
   .bfg-card__action,
   .bfg-card__header {
     line-height: $bfg-header-height;
