--- a/src/styles/demo.scss
+++ b/src/styles/demo.scss
@@ -164,11 +164,13 @@ $demo-toolbox-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
     border-radius: 0;
 
     &:first-child {
-      border-radius: $docs-border-radius $docs-border-radius 0 0;
+      border-top-left-radius: $docs-border-radius;
+      border-top-right-radius: $docs-border-radius;
     }
 
     &:last-child {
-      border-radius: 0 0 $docs-border-radius $docs-border-radius;
+      border-bottom-left-radius: $docs-border-radius;
+      border-bottom-right-radius: $docs-border-radius;
     }
 
     &:hover {
