--- a/src/lib/_card.scss
+++ b/src/lib/_card.scss
@@ -1,3 +1,13 @@
+.bfg-card {
+  margin: $bfg-margin 0;
+}
+
+.bfg {
+  &.bfg-card, .bfg-card {
+    margin: 0;
+  }
+}
+
 .bfg-card__action,
 .bfg-card__header {
   padding: 0 $bfg-padding;
@@ -42,7 +52,7 @@
   height: calc(100% - #{$bfg-header-height});
 }
 
-// Rules that are related in `bfg-theme` mixin and have to be wrapped in some high level selector
+// Rules that are related in `bfg-card` mixin and have to be wrapped in some high level selector
 .bfg-card[class*="bfg-card--"] {
   .bfg-card__action,
   .bfg-card__header {
@@ -65,6 +75,6 @@
   }
 }
 
-@if $bfg-theme-primary-included {
-  @include bfg-theme(primary, $bfg-theme-primary);
+@if $bfg-card-primary-included {
+  @include bfg-card(primary, $bfg-card-primary);
 }
