--- a/src/styles/demo.scss
+++ b/src/styles/demo.scss
@@ -219,6 +219,7 @@ $demo-toolbox-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
 .demo-toolbox__action--full-screen  { background-image: url(../images/desktop.svg);     }
 .demo-toolbox__action--auto-height  { background-image: url(../images/scroll.svg);      }
 .demo-toolbox__action--direction    { background-image: url(../images/directions.svg);  }
+.demo-toolbox__action--grid-gap     { background-image: url(../images/th-large.svg);    }
 
 /* ===== Handle dummy container and text ===== */
 
